--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,9 @@ services:
       - ${APP_PORT}:${APP_PORT}
     volumes:
       - ./:/app/
+  filebeat:
+    container_name: product-filebeat
+    image: docker.elastic.co/beats/filebeat:6.5.1
+    volumes:
+      - ./docker/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - ./log/:/logs/
